lower case sentences

--- a/CNN/pos.ipynb
+++ b/CNN/pos.ipynb
@@ -8,7 +8,19 @@
     }
    },
    "source": [
-    "# Readability Assessment through Convolutional Neural Network"
+    "# Readability Assessment through Learning"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "* Readability assessment is a well known problem in natural language processing field. \n",
+    "* Giving someone the suitable text for his level of comprehension (not so easy and not so hard) could maximize his understanding and enjoyment. "
    ]
   },
   {
@@ -19,14 +31,6 @@
     }
    },
    "source": [
-    "* Readability assessment is a well known problem in natural language processing field. \n",
-    "* Giving someone the suitable text for his level of comprehension (not so easy and not so hard) could maximize his understanding and enjoyment. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "|Rule Based System|Learning System|\n",
     "|:---|:---|\n",
     "|Hard to cover domain fully (a lot of if conditions)|Handles new data easily|\n",
@@ -35,7 +39,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "### Existing rules for readability assessment\n",
     ">Flesch–Kincaid formula(1943) = 206.835 − (1.015 × ASL) − (84.6 × ASW)<br>\n",
@@ -49,7 +57,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "In this notebook we are trying to assess the readability of a given text regardless of the text topic."
    ]
@@ -86,7 +98,7 @@
      "name": "#%% md\n"
     },
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "subslide"
     }
    },
    "source": [
@@ -95,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -137,7 +149,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "subslide"
     }
    },
    "source": [
@@ -151,20 +163,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {
     "pycharm": {
      "is_executing": false
     },
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "slide"
     }
    },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "22a40d47dad440b78aa1376a32caa193",
+       "model_id": "bf4f77d665d94712af646fabd03c7350",
        "version_major": 2,
        "version_minor": 0
       },
@@ -185,15 +197,18 @@
     "        [\"Elementary\",detokenize(articles_words[i+1][:words])]\n",
     "    ]\n",
     "    headers = ['Reading Level', 'Example']\n",
-    "    display(HTML(tabulate(data,tablefmt='html', headers=headers)+\"<style>th,td {font-size: 10px}</style>\"))"
+    "    display(HTML(tabulate(data,tablefmt='html', headers=headers)+\"<style>th,td {font-size: 20px}</style>\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "pycharm": {
      "is_executing": false
+    },
+    "slideshow": {
+     "slide_type": "slide"
     }
    },
    "outputs": [
@@ -213,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -247,7 +262,11 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -267,7 +286,11 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -348,7 +371,11 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -432,7 +459,7 @@
      "name": "#%%\n"
     },
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "slide"
     }
    },
    "outputs": [
@@ -1718,6 +1745,7 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Slideshow",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
