--- a/CNN/pos.ipynb
+++ b/CNN/pos.ipynb
@@ -176,7 +176,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bf4f77d665d94712af646fabd03c7350",
+       "model_id": "f5127b09118843b584941b3fcdfc1ce9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 5,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 6,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 8,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 21,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -1659,14 +1659,8 @@
    "source": [
     "es = EarlyStopping(monitor='val_soft_acc',patience=100, mode='max')\n",
     "cp = ModelCheckpoint('model-{epoch:03d}-{soft_acc:03f}-{val_soft_acc:03f}.h5', verbose=1, monitor='val_soft_acc',save_best_only=True, mode='max')  \n",
-    "model.compile(optimizer=RMSprop(),\n",
-    "loss='mse',\n",
-    "metrics=[soft_acc])\n",
-    "history = model.fit(data, tags,\n",
-    "epochs=1000,  \n",
-    "batch_size=50,\n",
-    "validation_split=0.2,\n",
-    "callbacks=[es, cp])\n",
+    "model.compile(optimizer=RMSprop(),loss='mse',metrics=[soft_acc])\n",
+    "history = model.fit(data, tags,epochs=1000,  batch_size=50,validation_split=0.2,callbacks=[es, cp])\n",
     "# model.save_weights('pre_trained_glove_model.h5')\n",
     "model.summary()"
    ]
@@ -1735,13 +1729,46 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "45.614034251162884\n",
+      "73.68421010803759\n",
+      "68.42105221330074\n",
+      "77.19298203786215\n",
+      "80.70175490881267\n",
+      "68.42105388641357\n",
+      "78.94736727078757\n",
+      "77.19298224700125\n",
+      "80.70175490881267\n",
+      "66.66666754969845\n",
+      "Accuracy: 71.75438593818896 std: 10.030731594091595\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import StratifiedKFold\n",
+    "kfold = StratifiedKFold(n_splits=10, shuffle=True)\n",
+    "cvs_scores = []\n",
+    "for train, test in kfold.split(data, tags):\n",
+    "    model.compile(optimizer=RMSprop(),loss='mse',metrics=[soft_acc])\n",
+    "    model.fit(data[train], tags[train], epochs=1000, verbose=0)\n",
+    "    scores = model.evaluate(data[test], tags[test], verbose=0)\n",
+    "    print(scores[1]*100)\n",
+    "    cvs_scores.append(scores[1]*100)\n",
+    "print(\"Accuracy:\", np.mean(cvs_scores),\"std:\", np.std(cvs_scores))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "result = model.evaluate(data, tags)\n",
-    "print(result[1])"
-   ]
+   "source": []
   }
  ],
  "metadata": {
