trying various k values

--- a/CNN/pos.ipynb
+++ b/CNN/pos.ipynb
@@ -176,7 +176,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f5127b09118843b584941b3fcdfc1ce9",
+       "model_id": "f7b0de2454ea49e9b7dc540aabdb85b1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -448,6 +448,25 @@
     "def soft_acc(y_true, y_pred):\n",
     "    from tensorflow.python.keras import backend as K\n",
     "    return K.mean(K.equal(K.round(y_true), K.round(y_pred)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import StratifiedKFold\n",
+    "kfold = StratifiedKFold(n_splits=10, shuffle=True)\n",
+    "cvs_scores = []\n",
+    "for train, test in kfold.split(data, tags):\n",
+    "    model.compile(optimizer=RMSprop(),loss='mse',metrics=[soft_acc])\n",
+    "    model.fit(data[train], tags[train], epochs=1000, verbose=0)\n",
+    "    scores = model.evaluate(data[test], tags[test], verbose=0)\n",
+    "    print(scores[1]*100)\n",
+    "    cvs_scores.append(scores[1]*100)\n",
+    "    model.reset_states()\n",
+    "print(\"Accuracy:\", np.mean(cvs_scores),\"std:\", np.std(cvs_scores))"
    ]
   },
   {
@@ -1725,42 +1744,6 @@
     "plt.show()\n",
     "\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "45.614034251162884\n",
-      "73.68421010803759\n",
-      "68.42105221330074\n",
-      "77.19298203786215\n",
-      "80.70175490881267\n",
-      "68.42105388641357\n",
-      "78.94736727078757\n",
-      "77.19298224700125\n",
-      "80.70175490881267\n",
-      "66.66666754969845\n",
-      "Accuracy: 71.75438593818896 std: 10.030731594091595\n"
-     ]
-    }
-   ],
-   "source": [
-    "from sklearn.model_selection import StratifiedKFold\n",
-    "kfold = StratifiedKFold(n_splits=10, shuffle=True)\n",
-    "cvs_scores = []\n",
-    "for train, test in kfold.split(data, tags):\n",
-    "    model.compile(optimizer=RMSprop(),loss='mse',metrics=[soft_acc])\n",
-    "    model.fit(data[train], tags[train], epochs=1000, verbose=0)\n",
-    "    scores = model.evaluate(data[test], tags[test], verbose=0)\n",
-    "    print(scores[1]*100)\n",
-    "    cvs_scores.append(scores[1]*100)\n",
-    "print(\"Accuracy:\", np.mean(cvs_scores),\"std:\", np.std(cvs_scores))"
    ]
   },
   {
