docs: applying nn

--- a/CNN/pos.ipynb
+++ b/CNN/pos.ipynb
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -453,19 +453,32 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "from sklearn.model_selection import StratifiedKFold\n",
     "kfold = StratifiedKFold(n_splits=10, shuffle=True)\n",
     "cvs_scores = []\n",
     "for train, test in kfold.split(data, tags):\n",
+    "    model = Sequential()\n",
+    "    model.add(Conv1D(128, 5, activation='relu',kernel_regularizer=l1_l2(l1=0.01, l2=0.01), input_shape=(1000,45)))\n",
+    "    model.add(MaxPooling1D(5))\n",
+    "    model.add(Conv1D(64, 5, activation='relu',kernel_regularizer=l1_l2(l1=0.001, l2=0.001)))\n",
+    "    model.add(MaxPooling1D(5))\n",
+    "    model.add(Conv1D(32, 5, activation='relu',kernel_regularizer=l1_l2(l1=0.0003, l2=0.0003)))\n",
+    "    model.add(GlobalMaxPooling1D())\n",
+    "    model.add(Dense(1))\n",
+    "    # model.summary()\n",
+    "    def soft_acc(y_true, y_pred):\n",
+    "        from tensorflow.python.keras import backend as K\n",
+    "        return K.mean(K.equal(K.round(y_true), K.round(y_pred)))\n",
     "    model.compile(optimizer=RMSprop(),loss='mse',metrics=[soft_acc])\n",
-    "    model.fit(data[train], tags[train], epochs=1000, verbose=0)\n",
+    "    model.fit(data[train], tags[train], epochs=2000, verbose=0)\n",
     "    scores = model.evaluate(data[test], tags[test], verbose=0)\n",
     "    print(scores[1]*100)\n",
     "    cvs_scores.append(scores[1]*100)\n",
-    "    model.reset_states()\n",
     "print(\"Accuracy:\", np.mean(cvs_scores),\"std:\", np.std(cvs_scores))"
    ]
   },
