docs: add conv pic

--- a/CNN/pos.ipynb
+++ b/CNN/pos.ipynb
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "scrolled": true
    },
@@ -464,7 +464,14 @@
       "61.40350887649938\n",
       "66.66666792150129\n",
       "49.122808272378485\n",
-      "45.614034617156314\n"
+      "45.614034617156314\n",
+      "64.91228080632393\n",
+      "54.385964807711154\n",
+      "57.89473715581393\n",
+      "73.68421178115042\n",
+      "64.91228101546305\n",
+      "55.555556217829384\n",
+      "Accuracy: 59.415205147182725 std: 8.120868247309904\n"
      ]
     }
    ],
