fix: import issue in ff model

--- a/FF/ff.ipynb
+++ b/FF/ff.ipynb
@@ -9,7 +9,7 @@
    "outputs": [],
    "source": [
     "from tensorflow import keras\n",
-    "from research.loading import load, load_reduced_features_tags\n",
+    "from utils.loading import load, load_reduced_features_tags\n",
     "import numpy as np"
    ]
   },
@@ -3210,6 +3210,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
    "version": "2.7.6"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
